--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 
-    
+
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js"
         integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy"
@@ -85,19 +85,26 @@
                     </div>
                     <div class="modal-body">
                         <p class="indented-text">
-                            我是一位從醫療領域轉職至資訊工程的開發者，擁有逢甲大學資訊工程學士後學位（2024-2025）以及國立臺北護理健康大學護理系學士學位（2010-2014）。
-                            我的職業生涯始於醫療領域，曾在衛生福利部雙和醫院擔任神經內科病房護理師，並在中山醫學大學附設醫院兒童部擔任研究助理。這些經驗培養了我細心、耐心以及解決問題的能力，
-                            同時也讓我意識到科技對於提升醫療服務的重要性。
+                            我具備逢甲大學資訊工程學士後學位（2024-2025）及國立臺北護理健康大學護理學士學位（2010-2014），
+                            是一位擁有跨領域整合視角與持續學習熱忱的工作者。
+
                         </p>
                         <p class="indented-text">
-                            在過去幾年中，我對促進醫療服務的數位轉型產生了濃厚的興趣。這種興趣驅使我進一步學習資訊工程，系統式掌握軟體開發生命週期（SDLC），從瀑布模型到敏捷模型，深入理解它們的流程與應用場景。在實際專案中，我參與了開發的各個階段，學習並落實每個階段的關鍵步驟，包括需求分析、設計、實作、測試與部署。在開發過程中，我全面學習了前端與後端技術，並掌握
-                            Vue.js 和 SpringBoot 等開發工具，資料庫 (MariaDB)
-                            設計與管理能力，以及單元測試（JUnit）、整合測試及前端的功能測試，能有效提升系統的穩定性與可靠性。並使用 Git 進行版本控制，確保團隊協作的效率與可靠性。
+                            我的職涯始於臨床護理，曾擔任：
+                        <ul>
+                            <li>客戶成功中心主管</li>
+                            <li>教育訓練主管</li>
+                            <li>研究助理與血友病個管師</li>
+                            <li>神經內科病房護理師</li>
+                        </ul>
+                        累積超過七年的醫療領域服務經驗。亦參與過數位醫療服務設計，作為臨床流程顧問，跨部門進行衛教系統開發，
+                        協助UI/UX介面設計、系統流程規劃。
                         </p>
 
-                        <p class="indented-text"> 除了程式開發技能，我也積極學習 UI/UX 設計，深刻理解使用者體驗在軟體開發中的重要性。為了提升這方面的能力，我在學程之外自學了
-                            Figma、Whimsical等設計工具，並應用於專案中進行介面設計與使用者流程規劃。我的師長曾評價：「這個畫面設計，是專業等級。」、「畫面舒服有業界水準。」
-                            ，這讓我在團隊中成為值得信賴的夥伴。力求讓產品在視覺和使用上直觀，為使用者提供高品質的操作體驗。
+                        <p class="indented-text">
+                            由於深刻體會科技對臨床照護現場帶來的影響力，讓我對醫療服務的數位轉型有相當濃厚的興趣，
+                            進一步往資訊工程領域學習，系統式掌握軟體開發生命週期（SDLC）、UI/UX 設計，期盼以人文關懷為核心、理工邏輯為支撐，
+                            實現兼具人文溫度與數位效率的智慧照護模式！
                         </p>
                     </div>
                 </div>
@@ -113,17 +120,18 @@
                     </div>
                     <div class="modal-body">
                         <p class="indented-text">
-                            我希望運用自身的軟體開發能力，助力醫療相關專案的創新與發展。這些經歷不僅增強了我在軟體開發上的實力，
-                            也讓我更加深刻地體會到數位轉型對醫療服務的價值與影響。
+                            我渴望運用自身護理與資訊工程的跨領域背景，投入醫療科技服務的創新與發展。
+                            透過技術驅動創新，實現以人為本的智慧醫療解決方案。
                         </p>
                         <p class="indented-text">
-                            同時，我渴望透過技術驅動創新，並與團隊協作，解決使用者痛點。對於優化醫療作業效率與患者照護質量，
-                            抱持極大的熱情，多方面為智慧醫療的發展開創更多可能性。
+                            結合軟體設計與照護經驗，優化醫療服務流程與患者照護品質，
+                            精準回應使用者痛點，並提升醫療作業的效率與整體醫療體驗。
                         </p>
                         <p class="indented-text">
-                            通過軟體設計與技術實踐，我希望能實現以人為本的智慧醫療解決方案，縮短病患與醫療服務之間的距離，
-                            並為打造更高效、更人性化的醫療環境貢獻自己的力量。
+                            我始終抱持高度熱情，相信數位科技對醫療服務的價值與影響力，能縮短病患與醫療服務之間的距離，
+                            期盼貢獻自身所長，打造更高效、更人性化的數位醫療照護環境。
                         </p>
+
                     </div>
                 </div>
             </div>
@@ -137,38 +145,44 @@
                         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                     </div>
                     <div class="modal-body">
-                        <p>1. 跨領域專業背景
+                        <p><b class="advantage-title"><i class="bi bi-1-square-fill"></i> 醫療與資訊的跨領域整合能力</b>
                         <ul>
-                            <li><span class="advantage-title">醫療領域經驗：</span>對醫療產業的運作模式有深入的了解，熟悉醫療環境、具備醫療流程知識，讓我對醫療專案需求有更好的感知。</li>
-                            <li><span class="advantage-title">技術與使用者的橋樑：</span>熟悉醫療專業術語，能有效與醫療專業人員溝通，能成為醫療與技術之間的橋樑。</li>
+                            <li>
+                                熟悉醫療環境、臨床語言，能有效與醫療專業使用者溝通
+                            </li>
+                            <li>
+                                具備需求訪談與分析能力，能作為技術團隊理解使用者需求的溝通橋樑。
+                            </li>
                         </ul>
                         </p>
 
-                        <p>2. 系統化的軟體開發能力與實踐經驗
+                        <p><b class="advantage-title"><i class="bi bi-2-square-fill"></i> 專案企劃與執行的實務經驗</b>
                         <ul>
-                            <li><span class="advantage-title">熟悉軟體開發生命週期（SDLC）：</span>能夠全面參與專案的各個階段，並落實每個階段的關鍵步驟。</li>
-                            <li><span class="advantage-title">熟悉前端技術：</span>具備 Vue、Bootstrap、RestfulAPI 等技術，能夠獨立完成開發與提升網站效能和維護。</li>
-                            <li><span class="advantage-title"> UI/UX 設計實踐：</span>使用 Figma、Whimsical 設計介面，專注細節與一致性，確保最佳使用者體驗。</li>
-                            <li><span class="advantage-title">前後端整合經驗：</span>熟悉 RESTful API、SpringBoot、MariaDB，能與後端工程師順暢合作，確保資料流暢且安全。</li>
+                            <li>醫療衛教系統開發專案顧問</li>
+                            <li>醫事人員教育訓練專案組長</li>
+                            <li>客戶體驗優化專案組長</li>
+                            <li>200人以上活動企劃委員</li>
                         </ul>
                         </p>
 
-                        <p>3. 強烈的學習熱情與適應力
-                        <ul>
-                            <li>專注軟體開發於人工智慧領域應用的熱忱。</li>
-                            <li>熱愛學習新領域的能力。</li>
-                        </ul>
-                        </p>
-                        <p>4. 專案管理與問題解決能力
+                        <p><b class="advantage-title"><i class="bi bi-3-square-fill"></i> 團隊協作與領導經驗</b>
                         <ul>
                             <li>主管職經驗： 負責團隊協調與目標設定，帶領團隊提升效率與執行力。</li>
                             <li>學校專案經驗： 擔任組長，帶領團隊完成專案，並獲得第一名的佳績。</li>
                         </ul>
                         </p>
 
-                        <strong>我相信，我能為貴中心的發展帶來獨特的價值與貢獻。</strong>
-                        <p>我對智慧醫療應用充滿熱忱，若貴中心有其他適合我的職位，也非常期待能有機會進一步交流或探討，探索更多合作的可能性。</p>
+                        <p><b class="advantage-title"><i class="bi bi-4-square-fill"></i> 持續自我成長與主動學習力</b>
+                        <ul>
+                            <li>專注軟體開發於人工智慧領域應用的熱忱。</li>
+                            <li>熱愛學習新領域的能力。</li>
+                        </ul>
+                        </p>
 
+                        <br>
+                        <i class="bi bi-megaphone-fill" style="color: #4769d0;"></i><strong> 我相信，我能為貴公司的發展帶來獨特的價值與貢獻！</strong>
+                        <!-- <p>期待能有機會進一步交流或探討，創造更多合作的可能性。</p> -->
+                        <br>
                     </div>
                 </div>
             </div>
@@ -184,7 +198,7 @@
                         <li class="location"></i>台中市</li>
                         <li class="github">
                             <a href="https://github.com/D1204416" target="_blank" rel="noopener noreferrer">
-                                <i class="bi bi-github"></i>  
+                                <i class="bi bi-github"></i>
                             </a> GitHub
                         </li>
                     </ul>
@@ -281,7 +295,7 @@
                             <div class="timeline-date">2023 – 2024</div>
                             <div class="position">兒童部 血液病中心 個管師職務代理 </div>
                             <ul class="duties">
-                                <li>負責臨床數據收集與分析，並協助建立數據平台，提高醫療研究效率。</li>
+                                <li>臨床數據彙整，建立數據平台，提高醫療研究效率。</li>
                                 <li>血友病患者個案管理，追蹤治療進展及藥物使用情況。</li>
                                 <li>血友病患者常規治療 ( 靜脈注射、肌肉注射、抽血等...... )。</li>
                             </ul>
@@ -337,7 +351,8 @@
 
                                     <!-- 運動中心預約網站 GitHub作品網址：https://d1204480.github.io/sport_reservation_frontend/ -->
                                     <div class="carousel-item active" data-bs-interval="10000">
-                                        <a href="https://www.canva.com/design/DAGm8IjOOfA/4puRQfX-JQ6SZMsS110Hdg/view?utm_content=DAGm8IjOOfA&utm_campaign=designshare&utm_medium=link2&utm_source=uniquelinks&utlId=h2be175b826" target="_blank">
+                                        <a href="https://www.canva.com/design/DAGm8IjOOfA/4puRQfX-JQ6SZMsS110Hdg/view?utm_content=DAGm8IjOOfA&utm_campaign=designshare&utm_medium=link2&utm_source=uniquelinks&utlId=h2be175b826"
+                                            target="_blank">
                                             <img src="banner/1.svg" class="d-block w-100" alt="運動中心預約網站">
                                         </a>
                                         <div class="carousel-caption d-none d-md-block">
@@ -346,7 +361,8 @@
 
                                     <!-- 市民卡2.0 GitHub作品網址：https://d1204416.github.io/RentPlace_Vue_User/ -->
                                     <div class="carousel-item" data-bs-interval="2000">
-                                        <a href="https://www.canva.com/design/DAGbHWHc_sQ/n0sZVbGX1G7vWM-z5Ja62g/view?utm_content=DAGbHWHc_sQ&utm_campaign=designshare&utm_medium=link2&utm_source=uniquelinks&utlId=h1ad8302cc4" target="_blank">
+                                        <a href="https://www.canva.com/design/DAGbHWHc_sQ/n0sZVbGX1G7vWM-z5Ja62g/view?utm_content=DAGbHWHc_sQ&utm_campaign=designshare&utm_medium=link2&utm_source=uniquelinks&utlId=h1ad8302cc4"
+                                            target="_blank">
                                             <img src="banner/2.svg" class="d-block w-100" alt="台中市民卡2.0">
                                         </a>
                                         <div class="carousel-caption d-none d-md-block">
@@ -355,7 +371,8 @@
 
                                     <!-- 寵物登網站 GitHub作品網址：https://d1204416.github.io/FindLostPet/ -->
                                     <div class="carousel-item">
-                                        <a href="https://www.canva.com/design/DAGO7R0PDok/Yx34lO6IyXe_n3ieA63xcQ/view?utm_content=DAGO7R0PDok&utm_campaign=designshare&utm_medium=link2&utm_source=uniquelinks&utlId=hc6cd0b48ef" target="_blank">
+                                        <a href="https://www.canva.com/design/DAGO7R0PDok/Yx34lO6IyXe_n3ieA63xcQ/view?utm_content=DAGO7R0PDok&utm_campaign=designshare&utm_medium=link2&utm_source=uniquelinks&utlId=hc6cd0b48ef"
+                                            target="_blank">
                                             <img src="banner/3.svg" class="d-block w-100" alt="作品3">
                                         </a>
                                         <div class="carousel-caption d-none d-md-block">
@@ -365,7 +382,7 @@
                                     <!-- Canva作品網址：https://www.canva.com/design/DAGcVMDA-Po/WiQY7tlDc0sIzh5ETNZcbw/view?utm_content=DAGcVMDA-Po&utm_campaign=designshare&utm_medium=link2&utm_source=uniquelinks&utlId=he696e854f7 -->
                                     <div class="carousel-item">
                                         <a href="https://www.canva.com/design/DAGcVMDA-Po/WiQY7tlDc0sIzh5ETNZcbw/view?utm_content=DAGcVMDA-Po&utm_campaign=designshare&utm_medium=link2&utm_source=uniquelinks&utlId=he696e854f7"
-                                         target="_blank">
+                                            target="_blank">
                                             <img src="banner/4.svg" class="d-block w-100" alt="作品4">
                                         </a>
                                         <div class="carousel-caption d-none d-md-block">
