--- a/index.html
+++ b/index.html
@@ -89,16 +89,17 @@
                             是一位擁有跨領域整合視角與持續學習熱忱的工作者。
 
                         </p>
-                        <p class="indented-text">
-                            我的職涯始於臨床護理，曾擔任：
+                        <p>我的職涯始於臨床護理，曾擔任：
                         <ul>
                             <li>客戶成功中心主管</li>
                             <li>教育訓練主管</li>
                             <li>研究助理與血友病個管師</li>
                             <li>神經內科病房護理師</li>
                         </ul>
-                        累積超過七年的醫療領域服務經驗。亦參與過數位醫療服務設計，作為臨床流程顧問，跨部門進行衛教系統開發，
-                        協助UI/UX介面設計、系統流程規劃。
+                        </p>
+                        <p class="indented-text">
+                            累積超過七年的醫療領域服務經驗。亦參與過數位醫療服務設計，作為臨床流程顧問，跨部門進行衛教系統開發，
+                            協助UI/UX介面設計、系統流程規劃。
                         </p>
 
                         <p class="indented-text">
@@ -120,11 +121,11 @@
                     </div>
                     <div class="modal-body">
                         <p class="indented-text">
-                            我渴望運用自身護理與資訊工程的跨領域背景，投入醫療科技服務的創新與發展。
+                            我渴望運用自身的跨領域背景，深耕醫療科技服務領域，推動實質應用。
                             透過技術驅動創新，實現以人為本的智慧醫療解決方案。
                         </p>
                         <p class="indented-text">
-                            結合軟體設計與照護經驗，優化醫療服務流程與患者照護品質，
+                            結合軟體設計與照護實務經驗，優化服務流程與患者照護品質，
                             精準回應使用者痛點，並提升醫療作業的效率與整體醫療體驗。
                         </p>
                         <p class="indented-text">
@@ -148,39 +149,39 @@
                         <p><b class="advantage-title"><i class="bi bi-1-square-fill"></i> 醫療與資訊的跨領域整合能力</b>
                         <ul>
                             <li>
-                                熟悉醫療環境、臨床語言，能有效與醫療專業使用者溝通
+                                熟悉醫療環境、臨床語言，能有效與醫療專業的使用者溝通
                             </li>
                             <li>
-                                具備需求訪談與分析能力，能作為技術團隊理解使用者需求的溝通橋樑。
+                                運用軟體需求分析能力，協助技術團隊掌握開發重點
                             </li>
                         </ul>
                         </p>
 
                         <p><b class="advantage-title"><i class="bi bi-2-square-fill"></i> 專案企劃與執行的實務經驗</b>
                         <ul>
-                            <li>醫療衛教系統開發專案顧問</li>
-                            <li>醫事人員教育訓練專案組長</li>
-                            <li>客戶體驗優化專案組長</li>
-                            <li>200人以上活動企劃委員</li>
+                            <li>醫療衛教系統專案</li>
+                            <li>客戶體驗優化專案</li>
+                            <li>望年會活動企劃專案</li>
                         </ul>
                         </p>
 
                         <p><b class="advantage-title"><i class="bi bi-3-square-fill"></i> 團隊協作與領導經驗</b>
                         <ul>
                             <li>主管職經驗： 負責團隊協調與目標設定，帶領團隊提升效率與執行力。</li>
-                            <li>學校專案經驗： 擔任組長，帶領團隊完成專案，並獲得第一名的佳績。</li>
+                            <li>軟體開發協作經驗： 擔任組長，帶領團隊完成專案，並獲得第一名的佳績。</li>
                         </ul>
                         </p>
 
                         <p><b class="advantage-title"><i class="bi bi-4-square-fill"></i> 持續自我成長與主動學習力</b>
                         <ul>
-                            <li>專注軟體開發於人工智慧領域應用的熱忱。</li>
+                            <li>專注智慧醫療領域應用的熱忱。</li>
                             <li>熱愛學習新領域的能力。</li>
                         </ul>
                         </p>
 
                         <br>
-                        <i class="bi bi-megaphone-fill" style="color: #4769d0;"></i><strong> 我相信，我能為貴公司的發展帶來獨特的價值與貢獻！</strong>
+                        <i class="bi bi-megaphone-fill" style="color: #4769d0;"></i><strong>
+                            我相信，我能為醫療科技的發展帶來獨特的價值與貢獻！</strong>
                         <!-- <p>期待能有機會進一步交流或探討，創造更多合作的可能性。</p> -->
                         <br>
                     </div>
