--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
                         <p>我的職涯始於臨床護理，曾擔任：
                         <ul>
                             <li>客戶成功中心主管</li>
-                            <li>教育訓練主管</li>
+                            <li>內部教練</li>
                             <li>研究助理與血友病個管師</li>
                             <li>神經內科病房護理師</li>
                         </ul>
@@ -146,33 +146,40 @@
                         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                     </div>
                     <div class="modal-body">
-                        <p><b class="advantage-title"><i class="bi bi-1-square-fill"></i> 醫療與資訊的跨領域整合能力</b>
+                        <p><b class="advantage-title"><i class="bi bi-1-square-fill"></i> 醫療 x 資訊 跨領域整合能力</b>
                         <ul>
                             <li>
-                                熟悉醫療環境、臨床語言，能有效與醫療專業的使用者溝通
+                                熟悉醫療環境、臨床語言，能有效與醫事人員溝通
                             </li>
                             <li>
-                                運用軟體需求分析能力，協助技術團隊掌握開發重點
+                                以軟體工程思維，運用方法和工具，協助團隊進行開發
                             </li>
                         </ul>
                         </p>
 
-                        <p><b class="advantage-title"><i class="bi bi-2-square-fill"></i> 專案企劃與執行的實務經驗</b>
+                        <p><b class="advantage-title"><i class="bi bi-2-square-fill"></i> 數位醫療服務專案實務</b>
                         <ul>
-                            <li>醫療衛教系統專案</li>
                             <li>客戶體驗優化專案</li>
-                            <li>望年會活動企劃專案</li>
+                            <li>醫療衛教系統專案</li>
                         </ul>
                         </p>
 
-                        <p><b class="advantage-title"><i class="bi bi-3-square-fill"></i> 團隊協作與領導經驗</b>
+                        <p><b class="advantage-title"><i class="bi bi-3-square-fill"></i> 線下活動企劃與執行經驗</b>
                         <ul>
-                            <li>主管職經驗： 負責團隊協調與目標設定，帶領團隊提升效率與執行力。</li>
-                            <li>軟體開發協作經驗： 擔任組長，帶領團隊完成專案，並獲得第一名的佳績。</li>
+                            <li>血液病中心春酒聯歡會</li>
+                            <li>生殖醫學望年會</li>
                         </ul>
                         </p>
 
-                        <p><b class="advantage-title"><i class="bi bi-4-square-fill"></i> 持續自我成長與主動學習力</b>
+                        <p><b class="advantage-title"><i class="bi bi-4-square-fill"></i> 軟體開發技能與團體協作經驗</b>
+                        <ul>
+                            <li>運動中心預約網站</li>
+                            <li>寵物登網站與APP開發設計</li>
+                            <li>台中市民卡2.0場地租借系統</li>
+                        </ul>
+                        </p>
+
+                        <p><b class="advantage-title"><i class="bi bi-5-square-fill"></i> 持續自我成長與主動學習力</b>
                         <ul>
                             <li>專注智慧醫療領域應用的熱忱。</li>
                             <li>熱愛學習新領域的能力。</li>
