--- a/index.html
+++ b/index.html
@@ -103,9 +103,8 @@
                         </p>
 
                         <p class="indented-text">
-                            由於深刻體會科技對臨床照護現場帶來的影響力，讓我對醫療服務的數位轉型有相當濃厚的興趣，
-                            進一步往資訊工程領域學習，系統式掌握軟體開發生命週期（SDLC）、UI/UX 設計，期盼以人文關懷為核心、理工邏輯為支撐，
-                            實現兼具人文溫度與數位效率的智慧照護模式！
+                            我的個性積極主動、樂於學習，擅長跨領域溝通與協作，能快速適應新環境並解決問題。
+                            目前專注於前端開發，熟悉 HTML、CSS、JavaScript、Vue 等技術，並具備良好的 UI/UX 設計能力。
                         </p>
                     </div>
                 </div>
@@ -120,17 +119,20 @@
                         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                     </div>
                     <div class="modal-body">
+
                         <p class="indented-text">
-                            我渴望運用自身的跨領域背景，深耕醫療科技服務領域，推動實質應用。
-                            透過技術驅動創新，實現以人為本的智慧醫療解決方案。
+                            由於深刻體會數位科技對臨床照護的價值與影響力，我對醫療服務的數位轉型產生濃厚興趣，
+                            因而進入資訊工程領域進修，系統化掌握軟體開發與 UI/UX 設計能力，
+                            期望以技術驅動創新，實現以人為本的智慧醫療解決方案。
+                        </p>
+
+                        <p class="indented-text">
+                            憑藉護理與資訊工程的跨領域背景，我能結合軟體設計與照護實務，精準回應使用者痛點，
+                            優化服務流程與醫療作業效率，並提升患者整體照護體驗。
                         </p>
                         <p class="indented-text">
-                            結合軟體設計與照護實務經驗，優化服務流程與患者照護品質，
-                            精準回應使用者痛點，並提升醫療作業的效率與整體醫療體驗。
-                        </p>
-                        <p class="indented-text">
-                            我始終抱持高度熱情，相信數位科技對醫療服務的價值與影響力，能縮短病患與醫療服務之間的距離，
-                            期盼貢獻自身所長，打造更高效、更人性化的數位醫療照護環境。
+                            我以人文關懷為核心、理工邏輯為支撐，致力推動兼具溫度與效率的智慧照護模式，縮短病患與醫療服務之間的距離。
+                            未來期盼持續貢獻所長，打造更高效、更人性化的數位醫療環境。
                         </p>
 
                     </div>
