--- a/index.html
+++ b/index.html
@@ -161,15 +161,16 @@
 
                         <p><b class="advantage-title"><i class="bi bi-2-square-fill"></i> 數位醫療服務專案實務</b>
                         <ul>
-                            <li>客戶體驗優化專案</li>
                             <li>醫療衛教系統專案</li>
+                            <li>客戶體驗優化專案</li>
                         </ul>
                         </p>
 
                         <p><b class="advantage-title"><i class="bi bi-3-square-fill"></i> 線下活動企劃與執行經驗</b>
                         <ul>
                             <li>血液病中心春酒聯歡會</li>
-                            <li>生殖醫學望年會</li>
+                            <li>臨床案例學習工作坊</li>
+                            <li>生殖醫學年度客戶望年會</li>                  
                         </ul>
                         </p>
 
