--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
                         <p>我的職涯始於臨床護理，曾擔任：
                         <ul>
                             <li>客戶成功中心主管</li>
-                            <li>內部教練</li>
+                            <li>新人師培教練</li>
                             <li>研究助理與血友病個管師</li>
                             <li>神經內科病房護理師</li>
                         </ul>
@@ -104,7 +104,19 @@
 
                         <p class="indented-text">
                             我的個性積極主動、樂於學習，擅長跨領域溝通與協作，能快速適應新環境並解決問題。
-                            目前專注於前端開發，熟悉 HTML、CSS、JavaScript、Vue 等技術，並具備良好的 UI/UX 設計能力。
+                            除了對專案管理有深入的理解外，我目前專注於自動化工作流設計，並使用 n8n 來簡化工作流程、提高效率和精確度。
+                        </p>
+                        <p>n8n 能協助專案管理以下幾個方面：
+                        <ul>
+                            <li>進度追蹤與報告自動化</li>
+                            <li>跨部門協作</li>
+                            <li>風險評估與管理</li>
+                            <li>簡化文件生成</li>
+                        </ul>
+                           <p class="indented-text">
+                            通過這些應用，我能夠有效推動專案進程，確保每一個步驟都在掌控之中，並且能靈活應對不斷變化的需求與挑戰。
+                        </p>
+                        
                         </p>
                     </div>
                 </div>
@@ -148,44 +160,42 @@
                         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                     </div>
                     <div class="modal-body">
-                        <p><b class="advantage-title"><i class="bi bi-1-square-fill"></i> 醫療 x 資訊 跨領域整合能力</b>
+                        <p><b class="advantage-title"><i class="bi bi-1-square-fill"></i> 醫療 × 資訊的跨域整合力</b>
                         <ul>
                             <li>
-                                熟悉醫療環境、臨床語言，能有效與醫事人員溝通
+                                熟悉醫療環境與臨床語言，能快速與醫師、護理師及醫技人員建立專業溝通橋樑。
                             </li>
                             <li>
-                                以軟體工程思維，運用方法和工具，協助團隊進行開發
+                                以軟體工程思維運用方法與工具，協助團隊進行系統分析、需求落實與開發協作。
                             </li>
                         </ul>
                         </p>
 
-                        <p><b class="advantage-title"><i class="bi bi-2-square-fill"></i> 數位醫療服務專案實務</b>
+                        <p><b class="advantage-title"><i class="bi bi-2-square-fill"></i> 數位醫療專案實戰經驗</b>
                         <ul>
-                            <li>醫療衛教系統專案</li>
-                            <li>客戶體驗優化專案</li>
+                            <li>曾主導及參與「客戶體驗優化」與「醫療衛教系統」專案，從需求分析到上線驗收全程參與。</li>
+                            <li>能結合臨床需求與數位工具，將服務流程轉化為可落地的系統功能。</li>
                         </ul>
                         </p>
 
-                        <p><b class="advantage-title"><i class="bi bi-3-square-fill"></i> 線下活動企劃與執行經驗</b>
+                        <p><b class="advantage-title"><i class="bi bi-3-square-fill"></i> 多場線下活動策劃與執行</b>
                         <ul>
-                            <li>血液病中心春酒聯歡會</li>
-                            <li>臨床案例學習工作坊</li>
-                            <li>生殖醫學年度客戶望年會</li>                  
+                            <li>籌劃並執行「血液病中心春酒聯歡會」、「臨床案例學習工作坊」、「生殖醫學年度客戶望年會」等活動。</li>
+                            <li>具備跨部門協調、活動流程規劃與現場應變能力。</li>
                         </ul>
                         </p>
 
-                        <p><b class="advantage-title"><i class="bi bi-4-square-fill"></i> 軟體開發技能與團體協作經驗</b>
+                        <p><b class="advantage-title"><i class="bi bi-4-square-fill"></i> 軟體開發與團體協作能力</b>
                         <ul>
-                            <li>運動中心預約網站</li>
-                            <li>寵物登網站與APP開發設計</li>
-                            <li>台中市民卡2.0場地租借系統</li>
+                            <li>實作開發「運動中心預約網站」、「寵物登網站與APP」、「台中市民卡2.0場地租借系統」。</li>
+                            <li>熟悉前端設計與後端整合，具敏捷開發（Agile）與版本控制（Git）協作經驗。</li>
                         </ul>
                         </p>
 
                         <p><b class="advantage-title"><i class="bi bi-5-square-fill"></i> 持續自我成長與主動學習力</b>
                         <ul>
-                            <li>專注智慧醫療領域應用的熱忱。</li>
-                            <li>熱愛學習新領域的能力。</li>
+                            <li>對智慧醫療領域應用保持高度熱忱，持續追蹤新技術與趨勢。</li>
+                            <li>具備快速學習與跨領域轉化能力，能應用於專案與解決方案。</li>
                         </ul>
                         </p>
 
@@ -228,11 +238,16 @@
 
                 <section class="section skills-section">
                     <h2 class="section-title-left section-title-left-skill">技能</h2>
+                                        <div class="skills-category">
+                        <h5 class="skills-category-title">自動化工作流設計</h5>
+                        <ul class="skills-list">
+                            <li>n8n</li>
+                        </ul>
+                    </div>
                     <div class="skills-category">
                         <h5 class="skills-category-title">UI/UX 設計</h5>
                         <ul class="skills-list">
-                            <li>Figma</li>
-                            <li>Whimsical</li>
+                            <li>Figma / Whimsical / Canva</li>
                         </ul>
                     </div>
 
@@ -244,9 +259,8 @@
                         <h6 style="font-weight: bold;">Front-end</h6>
                         <ul class="skills-list">
                             <li>HTML5 / CSS3 / JavaScript</li>
-                            <li>Bootstrap</li>
+                            <li>Bootstrap / Vue / React</li>
                             <!-- <li>JavaScript</li> -->
-                            <li>Vue</li>
                             <li>RESTful API</li>
                         </ul>
                     </div>
@@ -318,7 +332,7 @@
 
                             </div>
                             <div class="timeline-date">2016 – 2022</div>
-                            <div class="position">客戶成功中心領導</div>
+                            <div class="position">客戶成功中心領導、師培教練</div>
                             <ul class="duties">
                                 <li>負責設計並推動教育方案，協調各項資源</li>
                                 <li>客戶體驗設計</li>
