--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
                             我的個性積極主動、樂於學習，擅長跨領域溝通與協作，能快速適應新環境並解決問題。
                             除了對專案管理有深入的理解外，我目前專注於自動化工作流設計，並使用 n8n 來簡化工作流程、提高效率和精確度。
                         </p>
-                        <p>n8n 能協助專案管理以下幾個方面：
+                        <p>幫助我在專案中管理以下幾個方面：
                         <ul>
                             <li>進度追蹤與報告自動化</li>
                             <li>跨部門協作</li>
@@ -166,7 +166,7 @@
                                 熟悉醫療環境與臨床語言，能快速與醫師、護理師及醫技人員建立專業溝通橋樑。
                             </li>
                             <li>
-                                以軟體工程思維運用方法與工具，協助團隊進行系統分析、需求落實與開發協作。
+                                運用軟體工程方法與工具，能跨部門協調，協助團隊進行需求分析與開發協作。
                             </li>
                         </ul>
                         </p>
@@ -181,7 +181,7 @@
                         <p><b class="advantage-title"><i class="bi bi-3-square-fill"></i> 多場線下活動策劃與執行</b>
                         <ul>
                             <li>籌劃並執行「血液病中心春酒聯歡會」、「臨床案例學習工作坊」、「生殖醫學年度客戶望年會」等活動。</li>
-                            <li>具備跨部門協調、活動流程規劃與現場應變能力。</li>
+                            <li>具備活動流程規劃、導入培訓企劃與現場應變能力。</li>
                         </ul>
                         </p>
 
