--- a/index.html
+++ b/index.html
@@ -9,13 +9,24 @@
     <!-- <link rel="stylesheet" href="styles.css" id="light-theme"> -->
 
     <!-- 預先載入兩個主題的 CSS -->
-    <link rel="stylesheet" href="styles.css" id="light-theme">
-    <link rel="preload" rel="stylesheet" href="styles2.css" as="style" id="dark-theme" disabled>
+    <link rel="stylesheet" href="styles.css" id="theme">
+
+    <script>
+        // boot：在 CSS 載入前先設好 data-theme，避免閃爍
+        (function () {
+            try {
+                const saved = localStorage.getItem('theme');
+                // 若未儲存，跟隨系統偏好
+                const prefersDark = window.matchMedia && window.matchMedia('(prefers-color-scheme: dark)').matches;
+                const theme = saved || (prefersDark ? 'dark' : 'light');
+                document.documentElement.setAttribute('data-theme', theme);
+            } catch (e) { }
+        })();
+    </script>
 
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-
 
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js"
@@ -78,13 +89,13 @@
         <!-- Modal -->
         <div class="modal fade" id="about-me" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
             <div class="modal-dialog modal-dialog-centered">
-                <div class="modal-content">
+                <div class="modal-content" style="color: black;">
                     <div class="modal-header">
                         <h1 class="modal-title fs-5" id="exampleModalLabel">關於我</h1>
                         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                     </div>
                     <div class="modal-body">
-                        <p class="indented-text">
+                        <p class="indented-text" >
                             我具備逢甲大學資訊工程學士後學位（2024-2025）及國立臺北護理健康大學護理學士學位（2010-2014），
                             是一位擁有跨領域整合視角與持續學習熱忱的工作者。
 
@@ -125,7 +136,7 @@
 
         <div class="modal fade" id="work" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
             <div class="modal-dialog modal-dialog-centered">
-                <div class="modal-content">
+                <div class="modal-content" style="color: black;">
                     <div class="modal-header">
                         <h1 class="modal-title fs-5" id="exampleModalLabel">跨領域動機</h1>
                         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
@@ -154,7 +165,7 @@
 
         <div class="modal fade" id="advantage" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
             <div class="modal-dialog modal-dialog-centered">
-                <div class="modal-content">
+                <div class="modal-content" style="color: black;">
                     <div class="modal-header">
                         <h1 class="modal-title fs-5" id="exampleModalLabel">我的優勢</h1>
                         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
@@ -238,7 +249,7 @@
 
                 <section class="section skills-section">
                     <h2 class="section-title-left section-title-left-skill">技能</h2>
-                    
+
                     <div class="skills-category">
                         <h5 class="skills-category-title">自動化工作流設計</h5>
                         <ul class="skills-list">
