--- a/index.html
+++ b/index.html
@@ -230,8 +230,8 @@
                         <li class="location"></i>台中市</li>
                         <li class="github">
                             <a href="https://github.com/D1204416" target="_blank" rel="noopener noreferrer">
-                                <i class="bi bi-github"></i>
-                            </a> GitHub
+                                <i class="bi bi-github"></i>&ensp;GitHub
+                            </a> 
                         </li>
                     </ul>
                 </section>
@@ -259,7 +259,7 @@
                     <div class="skills-category">
                         <h5 class="skills-category-title">UI/UX 設計</h5>
                         <ul class="skills-list">
-                            <li>Figma / Whimsical / Canva</li>
+                            <li>Figma / Whimsical </li>
                         </ul>
                     </div>
 
