--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
                         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                     </div>
                     <div class="modal-body">
-                        <p class="indented-text" >
+                        <p class="indented-text">
                             我具備逢甲大學資訊工程學士後學位（2024-2025）及國立臺北護理健康大學護理學士學位（2010-2014），
                             是一位擁有跨領域整合視角與持續學習熱忱的工作者。
 
@@ -115,20 +115,9 @@
 
                         <p class="indented-text">
                             我的個性積極主動、樂於學習，擅長跨領域溝通與協作，能快速適應新環境並解決問題。
-                            除了對專案管理有深入的理解外，我目前專注於自動化工作流設計，並使用 n8n 來簡化工作流程、提高效率和精確度。
-                        </p>
-                        <p>幫助我在專案中管理以下幾個方面：
-                        <ul>
-                            <li>進度追蹤與報告自動化</li>
-                            <li>跨部門協作</li>
-                            <li>風險評估與管理</li>
-                            <li>簡化文件生成</li>
-                        </ul>
-                        <p class="indented-text">
-                            通過這些應用，我能夠有效推動專案進程，確保每一個步驟都在掌控之中，並且能靈活應對不斷變化的需求與挑戰。
+                            除了深入理解專案管理十大知識領域，亦學習將自動化工作流帶入管理應用，提高效率和精確度。
                         </p>
 
-                        </p>
                     </div>
                 </div>
             </div>
@@ -231,7 +220,7 @@
                         <li class="github">
                             <a href="https://github.com/D1204416" target="_blank" rel="noopener noreferrer">
                                 <i class="bi bi-github"></i>&ensp;GitHub
-                            </a> 
+                            </a>
                         </li>
                     </ul>
                 </section>
