--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
                 <nav class="button-group">
                     <button class="about-me nav-btn " data-bs-toggle="modal" data-bs-target="#about-me">關於我</button>
                     <button class="about-me nav-btn" data-bs-toggle="modal" data-bs-target="#work">求職動機</button>
-                    <button class="about-me nav-btn" data-bs-toggle="modal" data-bs-target="#advantage">我的優勢</button>
+                    <button class="about-me nav-btn" data-bs-toggle="modal" data-bs-target="#advantage">SWOT</button>
                 </nav>
             </div>
         </section>
@@ -156,48 +156,34 @@
             <div class="modal-dialog modal-dialog-centered">
                 <div class="modal-content" style="color: black;">
                     <div class="modal-header">
-                        <h1 class="modal-title fs-5" id="exampleModalLabel">我的優勢</h1>
+                        <h1 class="modal-title fs-5" id="exampleModalLabel">SWOT</h1>
                         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                     </div>
                     <div class="modal-body">
-                        <p><b class="advantage-title"><i class="bi bi-1-square-fill"></i> 醫療 × 資訊的跨域整合力</b>
-                        <ul>
-                            <li>
-                                熟悉醫療環境與臨床語言，能快速與醫師、護理師及醫技人員建立專業溝通橋樑。
-                            </li>
-                            <li>
-                                運用軟體工程方法與工具，能跨部門協調，協助團隊進行需求分析與開發協作。
-                            </li>
-                        </ul>
-                        </p>
 
-                        <p><b class="advantage-title"><i class="bi bi-2-square-fill"></i> 數位醫療專案實戰經驗</b>
-                        <ul>
-                            <li>曾主導及參與「客戶體驗優化」與「醫療衛教系統」專案，從需求分析到上線驗收全程參與。</li>
-                            <li>能結合臨床需求與數位工具，將服務流程轉化為可落地的系統功能。</li>
-                        </ul>
-                        </p>
+                        <dl class="swot-list">
+                            <dt>優勢 (Strengths)</dt>
+                            <dd>跨領域專業能力</dd>
+                            <dd>高度自我驅動與學習力</dd>
+                            <dd>強溝通與協作能力</dd>
+                            <dd>抗壓性與問題解決力</dd>
+                            <dd>創新與系統思維</dd>
 
-                        <p><b class="advantage-title"><i class="bi bi-3-square-fill"></i> 多場線下活動策劃與執行</b>
-                        <ul>
-                            <li>籌劃並執行「血液病中心春酒聯歡會」、「臨床案例學習工作坊」、「生殖醫學年度客戶望年會」等活動。</li>
-                            <li>具備活動流程規劃、導入培訓企劃與現場應變能力。</li>
-                        </ul>
-                        </p>
+                            <dt>劣勢 (Weaknesses)</dt>
+                            <dd>過度追求完美</dd>
+                            <dd>容易承擔過多責任</dd>
+                            <dd>過度分析可能拖延決策</dd>
 
-                        <p><b class="advantage-title"><i class="bi bi-4-square-fill"></i> 軟體開發與團體協作能力</b>
-                        <ul>
-                            <li>實作開發「運動中心預約網站」、「寵物登網站與APP」、「台中市民卡2.0場地租借系統」。</li>
-                            <li>熟悉前端設計與後端整合，具敏捷開發（Agile）與版本控制（Git）協作經驗。</li>
-                        </ul>
-                        </p>
+                            <dt>機會 (Opportunities)</dt>
+                            <dd>數位醫療與健康科技快速成長</dd>
+                            <dd>AI 與自動化專案需求增加</dd>
+                            <dd>跨領域教育與顧問角色</dd>
 
-                        <p><b class="advantage-title"><i class="bi bi-5-square-fill"></i> 持續自我成長與主動學習力</b>
-                        <ul>
-                            <li>對智慧醫療領域應用保持高度熱忱，持續追蹤新技術與趨勢。</li>
-                            <li>具備快速學習與跨領域轉化能力，能應用於專案與解決方案。</li>
-                        </ul>
-                        </p>
+                            <dt>威脅 (Threats)</dt>
+                            <dd>快速變動的技術環境</dd>
+                            <dd>跨領域角色認知挑戰</dd>
+                            <dd>高責任與多任務壓力</dd>
+                        </dl>
 
                         <br>
                         <i class="bi bi-megaphone-fill" style="color: #4769d0;"></i><strong>
