--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
         </div>
 
         <div class="modal fade" id="advantage" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-            <div class="modal-dialog modal-dialog-centered">
+            <div class="modal-dialog modal-dialog-centered modal-lg">
                 <div class="modal-content" style="color: black;">
                     <div class="modal-header">
                         <h1 class="modal-title fs-5" id="exampleModalLabel">SWOT</h1>
@@ -161,39 +161,55 @@
                     </div>
                     <div class="modal-body">
 
-                        <dl class="swot-list">
-                            <dt>優勢 (Strengths)</dt>
-                            <dd>跨領域專業能力</dd>
-                            <dd>高度自我驅動與學習力</dd>
-                            <dd>強溝通與協作能力</dd>
-                            <dd>抗壓性與問題解決力</dd>
-                            <dd>創新與系統思維</dd>
+                        <div class="swot-grid">
+                            <div class="swot-box strength">
+                                <h4>優勢 (Strengths)</h4>
+                                <ul>
+                                    <li>跨領域專業能力</li>
+                                    <li>高度自我驅動與學習力</li>
+                                    <li>強溝通與協作能力</li>
+                                    <li>抗壓性與問題解決力</li>
+                                    <li>創新與系統思維</li>
+                                </ul>
+                            </div>
 
-                            <dt>劣勢 (Weaknesses)</dt>
-                            <dd>過度追求完美</dd>
-                            <dd>容易承擔過多責任</dd>
-                            <dd>過度分析可能拖延決策</dd>
+                            <div class="swot-box weakness">
+                                <h4>劣勢 (Weaknesses)</h4>
+                                <ul>
+                                    <li>過度追求完美</li>
+                                    <li>容易承擔過多責任</li>
+                                    <li>過度分析可能拖延決策</li>
+                                </ul>
+                            </div>
 
-                            <dt>機會 (Opportunities)</dt>
-                            <dd>數位醫療與健康科技快速成長</dd>
-                            <dd>AI 與自動化專案需求增加</dd>
-                            <dd>跨領域教育與顧問角色</dd>
+                            <div class="swot-box opportunity">
+                                <h4>機會 (Opportunities)</h4>
+                                <ul>
+                                    <li>數位醫療與健康科技快速成長</li>
+                                    <li>AI 與自動化專案需求增加</li>
+                                    <li>跨領域教育與顧問角色</li>
+                                </ul>
+                            </div>
 
-                            <dt>威脅 (Threats)</dt>
-                            <dd>快速變動的技術環境</dd>
-                            <dd>跨領域角色認知挑戰</dd>
-                            <dd>高責任與多任務壓力</dd>
-                        </dl>
+                            <div class="swot-box threat">
+                                <h4>威脅 (Threats)</h4>
+                                <ul>
+                                    <li>快速變動的技術環境</li>
+                                    <li>跨領域角色認知挑戰</li>
+                                    <li>高責任與多任務壓力</li>
+                                </ul>
+                            </div>
+                        </div>
 
                         <br>
-                        <i class="bi bi-megaphone-fill" style="color: #4769d0;"></i><strong>
-                            我相信，我能為醫療科技的發展帶來獨特的價值與貢獻！</strong>
-                        <!-- <p>期待能有機會進一步交流或探討，創造更多合作的可能性。</p> -->
+                        <i class="bi bi-megaphone-fill" style="color: #4769d0;"></i>
+                        &ensp;<strong>我相信，我能為醫療科技的發展帶來獨特的價值與貢獻！</strong>
                         <br>
                     </div>
                 </div>
             </div>
         </div>
+
 
         <section class="resume-container main-content">
             <div class="left-column left-column-pro-info">
